# fuzzy-traffic-system

./: .gitignore  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SUMO_QUICKSTART.md  pyproject.toml  test_quick_sim.py  test_system.py
.github/workflows/: deploy.yml
docs/: README.md  SUMO_INTEGRATION.md
examples/: demo_sumo.py  simple_comparison.py
notebooks/: fuzzy_traffic_colab.ipynb  fuzzy_traffic_full_comparison.ipynb
scripts/: README.md  clean.sh  demo.sh  run.sh  serve.sh  setup.sh  sumo_gui.sh  sumo_headless.sh  sumo_run.sh  sumo_setup.sh  test.sh  visualize.sh
src/: __init__.py  main.py
src/fuzzy_controller/: __init__.py  controller.py  fuzzy_rules.py  membership_functions.py
src/simulation/: __init__.py  fixed_controller.py  scenarios.py  sumo_simulator.py  traffic_model.py
src/utils/: __init__.py  metrics.py
sumo_files/configs/: single_intersection.sumocfg
sumo_files/networks/: single_intersection.edg.xml  single_intersection.nod.xml  single_intersection.typ.xml
sumo_files/routes/: normal_traffic.rou.xml
web/: demo.html  index.html
web/css/: style.css
web/data/: .gitkeep  comparison_results.json
web/js/: demo.js  main.js  main_enhanced.js
